--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@
 # REDIRECT_HTTPS=true
 
 # Usually the same as BASE_URL, but accessible in frontend
-# VUE_APP_DOMAIN=https://dashy.to
+VUE_APP_DOMAIN=https://dash.anthonycastaneda.com
 
 # Should enable SRI for build script and link resources
 # INTEGRITY=true
