password and cleanup

--- a/public/conf.yml
+++ b/public/conf.yml
@@ -114,14 +114,6 @@ sections:
         icon: favicon
         url: https://mail.protonmail.com/
         description: Primary email account
-        tags: [hosted, personal, email, mail]
-        hotkey: 1
-      - title: CTemplar
-        icon: favicon
-        url: https://mail.ctemplar.com/
-        description: Secondary email account
-        tags: [hosted, personal, email, mail]
-        hotkey: 2
       - title: AnonAddy
         icon: favicon
         url: https://app.anonaddy.com/
@@ -129,12 +121,10 @@ sections:
         tags: [hosted, personal, forwarder, aliases, email]
         hotkey: 3
         statusCheckAcceptCodes: '401'
-      - title: LessPass
-        icon: favicon
-        url: https://lesspass.com/
-        description: Deterministic password generator
-        tags: [hosted, personal, password, generate, deterministic]
-        hotkey: 4
+      - title: BitWarden
+        icon: fas fa-user-shield
+        url: https://vault.bitwarden.com/
+        description: Password Vault
       - title: EteSync
         icon: favicon
         url: https://pim.etesync.com/
@@ -159,12 +149,6 @@ sections:
         description: Notes, and my second brain
         tags: [hosted, personal, notes]
         hotkey: 8
-      - title: 1Password
-        icon: favicon
-        url: https://my.1password.com/
-        description: Password Manager
-        tags: [hosted, personal, passwords]
-        hotkey: 9
 
   - name: Dev & Cloud
     icon: far fa-code
