--- a/public/conf.yml
+++ b/public/conf.yml
@@ -24,6 +24,9 @@ appConfig:
   enableErrorReporting: true
   allowConfigEdit: true
   enableFontAwesome: true
+  hideHeading: true
+  hideNav: true
+  hideFooter: true
 
 # Main content - An array of sections, each containing an array of items
 sections:
